tests/error/test1.src
.IPPcode18
def vAR GF@var